// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access Control creates first level resource 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates resources on existing level 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
          "testResource3": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource3",
            "parent": [Circular],
            "path": "testResource1/testResource3",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates role and not creates role copy or throws error 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {},
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates role and not creates role copy or throws error 2`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {},
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates roles and resources in chain 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
      "testResource2": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": [Circular],
        "path": "testResource2",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole1": Role {
      "accessControl": [Circular],
      "name": "testRole1",
    },
    "testRole2": Role {
      "accessControl": [Circular],
      "name": "testRole2",
    },
    "testRole3": Role {
      "accessControl": [Circular],
      "name": "testRole3",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates root resource 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "",
        "parent": [Circular],
        "path": "",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control creates second level resource 1`] = `
AccessControl {
  "_permissions": Object {},
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {},
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control imports dump 1`] = `
AccessControl {
  "_permissions": Object {
    "resource1#role1#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource1#role1#delete": Permission {
      "action": "delete",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "delete",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "delete",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource1#role1#read": Permission {
      "action": "read",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "read",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "read",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource1#role1#update": Permission {
      "action": "update",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "update",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role1#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role1#delete": Permission {
      "action": "delete",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "delete",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "delete",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role1#read": Permission {
      "action": "read",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "read",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "read",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role1#update": Permission {
      "action": "update",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "update",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role2#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
    "resource2#role2#delete": Permission {
      "action": "delete",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "delete",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "delete",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
    "resource2#role2#read": Permission {
      "action": "read",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "read",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "read",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
    "resource2#role2#update": Permission {
      "action": "update",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "update",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "resource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": [Circular],
        "path": "resource1",
      },
      "resource2": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": [Circular],
        "path": "resource2",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "role1": Role {
      "accessControl": [Circular],
      "name": "role1",
    },
    "role2": Role {
      "accessControl": [Circular],
      "name": "role2",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control imports simplified dump 1`] = `
AccessControl {
  "_permissions": Object {
    "resource1#role1#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": [Circular],
            "resource2": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource1",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
    },
    "resource2#role2#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
    "resource2#role2#update": Permission {
      "action": "update",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "update",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": false,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "resource1": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "resource2": [Circular],
          },
          "name": "",
          "parent": null,
          "path": "",
        },
        "path": "resource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "resource1": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource1",
        "parent": [Circular],
        "path": "resource1",
      },
      "resource2": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "resource2",
        "parent": [Circular],
        "path": "resource2",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "role1": Role {
      "accessControl": [Circular],
      "name": "role1",
    },
    "role2": Role {
      "accessControl": [Circular],
      "name": "role2",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Control returns resources 1`] = `
Resource {
  "accessControl": AccessControl {
    "_permissions": Object {
      "resource1#role1#create": Permission {
        "action": "create",
        "checkers": Object {
          "dynamicCheckerResolve": Checker {
            "action": "create",
            "checker": [MockFunction],
            "name": "dynamicCheckerResolve",
          },
          "static": StaticChecker {
            "action": "create",
            "checker": [Function],
            "name": "static",
            "permission": true,
          },
        },
        "resource": Resource {
          "accessControl": [Circular],
          "children": Object {},
          "name": "resource1",
          "parent": [Circular],
          "path": "resource1",
        },
        "role": Role {
          "accessControl": [Circular],
          "name": "role1",
        },
      },
      "resource2#role2#create": Permission {
        "action": "create",
        "checkers": Object {
          "dynamicCheckerResolve": Checker {
            "action": "create",
            "checker": [MockFunction],
            "name": "dynamicCheckerResolve",
          },
          "static": StaticChecker {
            "action": "create",
            "checker": [Function],
            "name": "static",
            "permission": true,
          },
        },
        "resource": Resource {
          "accessControl": [Circular],
          "children": Object {},
          "name": "resource2",
          "parent": [Circular],
          "path": "resource2",
        },
        "role": Role {
          "accessControl": [Circular],
          "name": "role2",
        },
      },
      "resource2#role2#update": Permission {
        "action": "update",
        "checkers": Object {
          "dynamicCheckerReject": Checker {
            "action": "update",
            "checker": [MockFunction],
            "name": "dynamicCheckerReject",
          },
          "static": StaticChecker {
            "action": "update",
            "checker": [Function],
            "name": "static",
            "permission": false,
          },
        },
        "resource": Resource {
          "accessControl": [Circular],
          "children": Object {},
          "name": "resource2",
          "parent": [Circular],
          "path": "resource2",
        },
        "role": Role {
          "accessControl": [Circular],
          "name": "role2",
        },
      },
    },
    "_resources": [Circular],
    "_roles": Object {
      "role1": Role {
        "accessControl": [Circular],
        "name": "role1",
      },
      "role2": Role {
        "accessControl": [Circular],
        "name": "role2",
      },
    },
    "l": Logger {
      "className": "AccessControl",
    },
  },
  "children": Object {
    "resource1": Resource {
      "accessControl": AccessControl {
        "_permissions": Object {
          "resource1#role1#create": Permission {
            "action": "create",
            "checkers": Object {
              "dynamicCheckerResolve": Checker {
                "action": "create",
                "checker": [MockFunction],
                "name": "dynamicCheckerResolve",
              },
              "static": StaticChecker {
                "action": "create",
                "checker": [Function],
                "name": "static",
                "permission": true,
              },
            },
            "resource": [Circular],
            "role": Role {
              "accessControl": [Circular],
              "name": "role1",
            },
          },
          "resource2#role2#create": Permission {
            "action": "create",
            "checkers": Object {
              "dynamicCheckerResolve": Checker {
                "action": "create",
                "checker": [MockFunction],
                "name": "dynamicCheckerResolve",
              },
              "static": StaticChecker {
                "action": "create",
                "checker": [Function],
                "name": "static",
                "permission": true,
              },
            },
            "resource": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
            "role": Role {
              "accessControl": [Circular],
              "name": "role2",
            },
          },
          "resource2#role2#update": Permission {
            "action": "update",
            "checkers": Object {
              "dynamicCheckerReject": Checker {
                "action": "update",
                "checker": [MockFunction],
                "name": "dynamicCheckerReject",
              },
              "static": StaticChecker {
                "action": "update",
                "checker": [Function],
                "name": "static",
                "permission": false,
              },
            },
            "resource": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource2",
              "parent": [Circular],
              "path": "resource2",
            },
            "role": Role {
              "accessControl": [Circular],
              "name": "role2",
            },
          },
        },
        "_resources": [Circular],
        "_roles": Object {
          "role1": Role {
            "accessControl": [Circular],
            "name": "role1",
          },
          "role2": Role {
            "accessControl": [Circular],
            "name": "role2",
          },
        },
        "l": Logger {
          "className": "AccessControl",
        },
      },
      "children": Object {},
      "name": "resource1",
      "parent": [Circular],
      "path": "resource1",
    },
    "resource2": Resource {
      "accessControl": AccessControl {
        "_permissions": Object {
          "resource1#role1#create": Permission {
            "action": "create",
            "checkers": Object {
              "dynamicCheckerResolve": Checker {
                "action": "create",
                "checker": [MockFunction],
                "name": "dynamicCheckerResolve",
              },
              "static": StaticChecker {
                "action": "create",
                "checker": [Function],
                "name": "static",
                "permission": true,
              },
            },
            "resource": Resource {
              "accessControl": [Circular],
              "children": Object {},
              "name": "resource1",
              "parent": [Circular],
              "path": "resource1",
            },
            "role": Role {
              "accessControl": [Circular],
              "name": "role1",
            },
          },
          "resource2#role2#create": Permission {
            "action": "create",
            "checkers": Object {
              "dynamicCheckerResolve": Checker {
                "action": "create",
                "checker": [MockFunction],
                "name": "dynamicCheckerResolve",
              },
              "static": StaticChecker {
                "action": "create",
                "checker": [Function],
                "name": "static",
                "permission": true,
              },
            },
            "resource": [Circular],
            "role": Role {
              "accessControl": [Circular],
              "name": "role2",
            },
          },
          "resource2#role2#update": Permission {
            "action": "update",
            "checkers": Object {
              "dynamicCheckerReject": Checker {
                "action": "update",
                "checker": [MockFunction],
                "name": "dynamicCheckerReject",
              },
              "static": StaticChecker {
                "action": "update",
                "checker": [Function],
                "name": "static",
                "permission": false,
              },
            },
            "resource": [Circular],
            "role": Role {
              "accessControl": [Circular],
              "name": "role2",
            },
          },
        },
        "_resources": [Circular],
        "_roles": Object {
          "role1": Role {
            "accessControl": [Circular],
            "name": "role1",
          },
          "role2": Role {
            "accessControl": [Circular],
            "name": "role2",
          },
        },
        "l": Logger {
          "className": "AccessControl",
        },
      },
      "children": Object {},
      "name": "resource2",
      "parent": [Circular],
      "path": "resource2",
    },
  },
  "name": "",
  "parent": null,
  "path": "",
}
`;

exports[`Access Control returns roles 1`] = `
Object {
  "role1": Role {
    "accessControl": AccessControl {
      "_permissions": Object {
        "resource1#role1#create": Permission {
          "action": "create",
          "checkers": Object {
            "dynamicCheckerResolve": Checker {
              "action": "create",
              "checker": [MockFunction],
              "name": "dynamicCheckerResolve",
            },
            "static": StaticChecker {
              "action": "create",
              "checker": [Function],
              "name": "static",
              "permission": true,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource1",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": [Circular],
                "resource2": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource2",
                  "parent": [Circular],
                  "path": "resource2",
                },
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource1",
          },
          "role": [Circular],
        },
        "resource2#role2#create": Permission {
          "action": "create",
          "checkers": Object {
            "dynamicCheckerResolve": Checker {
              "action": "create",
              "checker": [MockFunction],
              "name": "dynamicCheckerResolve",
            },
            "static": StaticChecker {
              "action": "create",
              "checker": [Function],
              "name": "static",
              "permission": true,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource1",
                  "parent": [Circular],
                  "path": "resource1",
                },
                "resource2": [Circular],
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource2",
          },
          "role": Role {
            "accessControl": [Circular],
            "name": "role2",
          },
        },
        "resource2#role2#update": Permission {
          "action": "update",
          "checkers": Object {
            "dynamicCheckerReject": Checker {
              "action": "update",
              "checker": [MockFunction],
              "name": "dynamicCheckerReject",
            },
            "static": StaticChecker {
              "action": "update",
              "checker": [Function],
              "name": "static",
              "permission": false,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource1",
                  "parent": [Circular],
                  "path": "resource1",
                },
                "resource2": [Circular],
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource2",
          },
          "role": Role {
            "accessControl": [Circular],
            "name": "role2",
          },
        },
      },
      "_resources": Resource {
        "accessControl": [Circular],
        "children": Object {
          "resource1": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource1",
            "parent": [Circular],
            "path": "resource1",
          },
          "resource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": [Circular],
            "path": "resource2",
          },
        },
        "name": "",
        "parent": null,
        "path": "",
      },
      "_roles": [Circular],
      "l": Logger {
        "className": "AccessControl",
      },
    },
    "name": "role1",
  },
  "role2": Role {
    "accessControl": AccessControl {
      "_permissions": Object {
        "resource1#role1#create": Permission {
          "action": "create",
          "checkers": Object {
            "dynamicCheckerResolve": Checker {
              "action": "create",
              "checker": [MockFunction],
              "name": "dynamicCheckerResolve",
            },
            "static": StaticChecker {
              "action": "create",
              "checker": [Function],
              "name": "static",
              "permission": true,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource1",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": [Circular],
                "resource2": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource2",
                  "parent": [Circular],
                  "path": "resource2",
                },
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource1",
          },
          "role": Role {
            "accessControl": [Circular],
            "name": "role1",
          },
        },
        "resource2#role2#create": Permission {
          "action": "create",
          "checkers": Object {
            "dynamicCheckerResolve": Checker {
              "action": "create",
              "checker": [MockFunction],
              "name": "dynamicCheckerResolve",
            },
            "static": StaticChecker {
              "action": "create",
              "checker": [Function],
              "name": "static",
              "permission": true,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource1",
                  "parent": [Circular],
                  "path": "resource1",
                },
                "resource2": [Circular],
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource2",
          },
          "role": [Circular],
        },
        "resource2#role2#update": Permission {
          "action": "update",
          "checkers": Object {
            "dynamicCheckerReject": Checker {
              "action": "update",
              "checker": [MockFunction],
              "name": "dynamicCheckerReject",
            },
            "static": StaticChecker {
              "action": "update",
              "checker": [Function],
              "name": "static",
              "permission": false,
            },
          },
          "resource": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": Resource {
              "accessControl": [Circular],
              "children": Object {
                "resource1": Resource {
                  "accessControl": [Circular],
                  "children": Object {},
                  "name": "resource1",
                  "parent": [Circular],
                  "path": "resource1",
                },
                "resource2": [Circular],
              },
              "name": "",
              "parent": null,
              "path": "",
            },
            "path": "resource2",
          },
          "role": [Circular],
        },
      },
      "_resources": Resource {
        "accessControl": [Circular],
        "children": Object {
          "resource1": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource1",
            "parent": [Circular],
            "path": "resource1",
          },
          "resource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "resource2",
            "parent": [Circular],
            "path": "resource2",
          },
        },
        "name": "",
        "parent": null,
        "path": "",
      },
      "_roles": [Circular],
      "l": Logger {
        "className": "AccessControl",
      },
    },
    "name": "role2",
  },
}
`;
